<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_workout"
        android:icon="@drawable/ic_fitness_center_black_24dp"
        android:title="@string/title_workout" />

    <item
        android:id="@+id/navigation_exercises"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/title_exercises" />
    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/title_progress" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
